@@ -4,7 +4,6 @@ import input.MovieInput;
 import input.UserInput;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class CommandOutput {
@@ -29,30 +28,60 @@ public class CommandOutput {
 
     public CommandOutput(final MovieInput movie, final UserInput user) {
         this.user = new UserInput(user);
-        this.moviesList = Collections.singletonList(new MovieInput(movie));
+        this.moviesList = List.of(new MovieInput(movie));
     }
 
+
+    /**
+     * getter for error
+     * @return - error
+     */
     public String getError() {
         return error;
     }
 
+
+    /**
+     * setter for error
+     * @param error - error
+     */
     public void setError(final String error) {
         this.error = error;
     }
 
+
+    /**
+     * getter for current list
+     * @return - list of movies
+     */
     public List<MovieInput> getCurrentMoviesList() {
         return moviesList;
     }
 
-    public void setCurrentMoviesList(final List<MovieInput> moviesList) {
-        this.moviesList = moviesList;
+
+    /**
+     * setter for current movies
+     * @param moviesInputList - list
+     */
+    public void setCurrentMoviesList(final List<MovieInput> moviesInputList) {
+        this.moviesList = moviesInputList;
     }
 
+
+    /**
+     * getter for current user
+     * @return - user
+     */
     public UserInput getCurrentUser() {
         return user;
     }
 
-    public void setCurrentUser(final UserInput user) {
-        this.user = user;
+
+    /**
+     * setter for current user
+     * @param userInput - user
+     */
+    public void setCurrentUser(final UserInput userInput) {
+        this.user = userInput;
     }
 }
